Fixed HeroChart doesn't show bottom tooltip (when bottom bars are too small)

--- a/packages/ui-library/src/css/layout/_hero-chart.scss
+++ b/packages/ui-library/src/css/layout/_hero-chart.scss
@@ -96,12 +96,6 @@
         }
     }
 
-    &__bottom-chart {
-        .recharts-surface {
-            transform: scaleY(-1);
-        }
-    }
-
     &__rocker {
         position: absolute;
         left: 50%;
